--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.20.11",
+    "node": "^13.12.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
