--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.20.11",
     "node": "^13.12.0",
